syntax = "proto3";
package sub_payment;
option go_package = "/pb";

message NotifyPaymentCompleteReq{
    int64 payment_id=1;
}
message NotifyPaymentCompleteResp{
    string status=1;
    string email=2;
}

message NotifyRegisterReq{
    int64 user_id=1;
}
message NotifyRegisterResp{
    string status=1;
    string email=2;
}

service EmailNotifService{
    rpc NotifyPaymentComplete(NotifyPaymentCompleteReq) returns (NotifyPaymentCompleteResp);
    rpc NotifyRegister(NotifyRegisterReq) returns (NotifyRegisterResp);
}